@@ -383,6 +383,8 @@ CgHttpResponse *cg_https_request_post(CgHttpRequest *httpReq, char *ipaddr, int 
 BOOL cg_http_request_read(CgHttpRequest *httpReq, CgSocket *sock);
 BOOL cg_http_request_postresponse(CgHttpRequest *httpReq, CgHttpResponse *httpRes);
 BOOL cg_http_request_poststatuscode(CgHttpRequest *httpReq, int httpStatCode);
+BOOL cg_http_request_postchunkeddata(CgHttpRequest *httpReq, void *data, int dataLen);
+BOOL cg_http_request_postchunkedsize(CgHttpRequest *httpReq, int dataLen);
 
 #define cg_http_request_postokrequest(httpReq) cg_http_request_poststatuscode(httpReq, CG_HTTP_STATUS_OK)
 #define cg_http_request_postbadrequest(httpReq) cg_http_request_poststatuscode(httpReq, CG_HTTP_STATUS_BAD_REQUEST)
